# hosho

./: Cargo.toml  README.md  a.md  devtools.js  manifest.json  panel.html  popup.html  popup.js
extension/: devtools.html  manifest.json  package.json  panel.html  popup.html
extension/panel/: app.js  config.js  index.js
extension/panel/capture/: console.js  network.js  url.js
ingestor/: Cargo.toml  errors.yaml  wrangler.toml
ingestor/.wrangler/cache/: cf.json  wrangler-account.json
ingestor/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
ingestor/docs/: har-to-otel-data-spec.md
ingestor/src/: lib.rs  prelude.rs  router.rs  settings.rs
ingestor/src/handlers/: ingest.rs  mod.rs  probes.rs
ingestor/src/internal/: error.rs  mod.rs
ingestor/src/internal/exporter/: logs.rs  metrics.rs  mod.rs  otel.rs  traces.rs
ingestor/src/internal/exporter/spec/: har.rs
ingestor/src/internal/metrics/: console.rs  har.rs  mod.rs
ingestor/src/internal/normalize/: console.rs  har.rs  headers.rs  identity.rs  initiator.rs  mod.rs  time.rs  url.rs
ingestor/src/internal/specs/: capture.rs  console.rs  har.rs  metrics.rs  mod.rs  network.rs  telemetry.rs  timing.rs
ingestor/src/internal/telemetry/: attributes.rs  config.rs  exporter.rs  ids.rs  logs.rs  metrics.rs  mod.rs  payload.rs  resource.rs  strategy.rs  traces.rs
ingestor/tests/fixtures/: console_record.json  har_record.json
panel/: app.js  config.js  console-capture.js  index.js  metrics.js  network-capture.js  redaction.js  state.js  telemetry.js  transport.js  ui.js
panel/capture/: console.js  network.js
pkg/: hosho.js  hosho_bg.wasm  package.json
src/: lib.rs
