[package]
name = "hosho-ingestor"
version = "0.1.0"
edition = "2021"
authors = ["ashupednekar <ashutoshpednekar15@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false, features=["json"] }
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
config = "0.15.23"
lazy_static = "1.5.0"
standard-error = "0.1.9"
async-trait = "0.1.89"
opentelemetry = "0.32.0"
opentelemetry-http = { version = "0.32.0", default-features = false }
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "logs", "metrics", "trace"] }
