[package]
name = "hosho-ingestor"
version = "0.1.0"
edition = "2021"
authors = ["ashupednekar <ashutoshpednekar15@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false, features=["json"] }
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
hex = "0.4.3"
opentelemetry = { version = "0.32.0", default-features = false }
opentelemetry_sdk = { version = "0.32.1", default-features = false }
sha2 = "0.10.9"
url = "2.5.8"
lazy_static = "1.5.0"
config = "0.15.23"
standard-error = "0.1.9"
