[package]
name = "hosho-ingestor"
version = "0.1.0"
edition = "2021"
authors = ["ashupednekar <ashutoshpednekar15@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false, features=["json"] }
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
hex = "0.4.3"
sha2 = "0.10.9"
url = "2.5.8"
config = { version = "0.15.23", default-features=false}
lazy_static = "1.5.0"
standard-error = "0.1.11"
opentelemetry = { version = "0.32", default-features = false, features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "reqwest-client", "trace", "logs"] }
